updated with master, home spacing needs to be fixed

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -178,8 +178,9 @@ h4 {
     left: 0;
     right: 0;
     width: 100%;
-    height: 130px;
-    width: 130px;
+    height: 140px;
+    width: 140px;
+    padding: 0;
     opacity: 0;
     transition: .5s ease;
     background-color: #101419;
